Add title and description.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+title: Programming Discussion Discord
+description: >
+  The Programming Discussions Discord server is an
+  open, friendly and welcoming environment to discuss
+  or ask questions about programming. Join at
+  https://discord.gg/9zT7NHP!
+
 theme: jekyll-theme-tactile
