--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,6 @@ title: Programming Discussion Discord
 description: >
   The Programming Discussions Discord server is an
   open, friendly and welcoming environment to discuss
-  or ask questions about programming. Join at
-  https://discord.gg/9zT7NHP!
+  or ask questions about programming.
 
 theme: jekyll-theme-cayman
