Modify description some more.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Programming Discussion Discord
+title: Programming Discussions Discord
 description: >
-  The Programming Discussions Discord server is an
-  open, friendly and welcoming environment to discuss
-  or ask questions about programming.
+  Our server is an open, friendly and welcoming
+  environment to discuss or ask questions about
+  programming.
 
 theme: jekyll-theme-cayman
